# moe_llama

./: .gitignore  LICENSE  README.md  bpe_tokenizer.py  char_tokenizer.py  config.hocon  infer_moe.py  infermoe.py  infermoe.txt  moe_chatgpt.py  moe_deepseek.py  moellama.py  pyproject.toml  pytest.ini  requirements.txt
config/: config.hocon  config_multi_large.hocon  config_multi_simple.hocon  config_multi_tiny.hocon  config_multistage.hocon  config_wikitext.hocon  logging.json
docs/: chat_ui.md  datasets.md  evaluation.md  troubleshooting.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AssistantMessage.tsx  Composer.tsx  ModelSelector.tsx  SavedMessages.tsx  Sidebar.tsx  ThemeToggle.tsx  Thread.tsx  UserMessage.tsx
frontend/src/lib/: chatApi.ts  theme.tsx  threadStore.ts  threads.ts
moellama/: __init__.py  attention.py  benchmarks.py  dataset.py  dataset_manager.py  layers.py  logging_setup.py  model.py  moe.py  peft_utils.py  report.py  streaming_dataloader.py  tokenizer.py  trainer.py  utils.py
moellama/benchmarks/: __init__.py  arc.py  base.py  evaluator.py  gsm8k.py  hellaswag.py  mmlu.py  winogrande.py
moellama/stages/: __init__.py  base_train.py  mid_train.py  pipeline.py  sft_train.py
scripts/: __init__.py  build_frontend.sh  chat_server.py  evaluate.py  inference.py  interactive.py  run_benchmarks.py  train.py  train_multistage.py
tests/: __init__.py  conftest.py  test_benchmarks.py  test_dataset_manager.py  test_model.py  test_tokenizer.py  test_trainer.py  tests.md
