[project]
name = "moe-llama"
version = "0.1.0"
description = "A modular agent-ready framework for exploring domain-specific languages (DSLs) with KAIT protocol support"
readme = "README.md"
authors = [{ name = "Deepak" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["moe_llama", "mixture of experts", "domain specific language", "agent", "kait", "knowledge acquisition"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",

    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
# dynamic = ["version"]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.64.0",
    "datasets>=2.14.0",  # Required for multi-dataset support
    "transformers>=4.30.0",
    "sentencepiece>=0.1.99",
    "safetensors>=0.3.0",
    "tokenizers>=0.13.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pyhocon>=0.3.61",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",  # Enhanced logging with color-coding
    "tensorboard>=2.14.0",  # TensorBoard for training metrics
    "wandb>=0.16.0",  # WandB for experiment tracking (optional)
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.1",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# Optional dependencies for advanced features
peft = [
    "peft>=0.7.0",  # For LoRA/QLoRA fine-tuning
    "bitsandbytes>=0.41.0",  # For QLoRA quantization (optional)
]

[project.urls]
Homepage = "https://github.com/deepsaia/moe_llama"
Repository = "https://github.com/deepsaia/moe_llama"
Documentation = "https://github.com/deepsaia/moe_llama#readme"
Issues = "https://github.com/deepsaia/moe_llama/issues"
